--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cycle/run": "^3.3.0",
     "@types/react": "^16.0.10",
     "@types/react-native": "^0.49.2",
+    "nodejs-mobile-react-native": "^0.1.1",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "typescript": "^2.5.3",
