--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "outDir": "./lib",
     "lib": ["dom", "es5", "scripthost", "es2015"]
   },
-  "files": ["src/main.ts"],
+  "files": [
+    "src/main.ts",
+    "src/drivers/nodejs.ts",
+    "src/typings/nodejs-mobile-react-native.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
