Use Dat-node in nodejs-project and in foreground

--- a/nodejs-assets/nodejs-project/package.json
+++ b/nodejs-assets/nodejs-project/package.json
@@ -1,5 +1,8 @@
 {
   "name": "dat-installer-background",
   "version": "0.0.0",
-  "main": "main.js"
+  "main": "main.js",
+  "dependencies": {
+    "dat-node": "3.5.3"
+  }
 }
