--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodejs-mobile-react-native": "^0.1.1",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
+    "react-native-fs": "^2.8.1",
     "typescript": "^2.5.3",
     "xstream": "^11.0.0"
   },
