Use common messages.d.ts between front and back

--- a/tsconfig-backend.json
+++ b/tsconfig-backend.json
@@ -14,5 +14,5 @@
     "lib": ["es5"]
   },
   "files": ["src/backend/main.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/typings/messages.d.ts"]
 }
