--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "test": "jest"
   },
   "dependencies": {
-    "@cycle/native-screen": "^1.0.0-rc.4",
     "@cycle/run": "^3.3.0",
     "@types/react": "^16.0.10",
     "@types/react-native": "^0.49.2",
+    "cycle-native-navigation": "^1.1.0",
     "nodejs-mobile-react-native": "^0.1.1",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-fs": "^2.8.1",
+    "react-native-navigation": "^1.1.236",
     "typescript": "^2.5.3",
     "xstream": "^11.0.0"
   },
