--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "setup-back":
-      "cp ./src/backend/package.json ./nodejs-assets/nodejs-project/",
+    "setup-back": "cp ./src/backend/package.json ./nodejs-assets/nodejs-project/",
     "compile-back": "tsc -p ./tsconfig-backend.json",
     "install-back": "cd ./nodejs-assets/nodejs-project && npm i && cd ../..",
-    "build-back":
-      "npm run setup-back && npm run compile-back && npm run install-back",
+    "build-back": "npm run setup-back && npm run compile-back && npm run install-back",
     "build-front": "tsc -p ./tsconfig-frontend.json",
     "prestart": "npm run build-back && npm run build-front",
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -22,6 +20,7 @@
     "nodejs-mobile-react-native": "^0.1.1",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
+    "react-native-action-button": "^2.8.0",
     "react-native-fs": "^2.8.1",
     "react-native-navigation": "^1.1.236",
     "typescript": "^2.5.3",
