--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@cycle/isolate": "^3.1.0",
     "@cycle/run": "^3.3.0",
     "@types/react": "^16.0.10",
     "@types/react-native": "^0.49.2",
