--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ buck-out/
 # Generated
 #
 /lib
-/nodejs-assets/nodejs-project/main.js
-/nodejs-assets/nodejs-project/package.json
+/rnnodeapp
+/android/app/src/main/res/raw/rnnodebundle
