--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,9 +137,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-node')
     compile project(':react-native-navigation')
     compile project(':react-native-fs')
-    compile project(':nodejs-mobile-react-native')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
