--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,9 +1,9 @@
 rootProject.name = 'DatInstaller'
+include ':react-native-node'
+project(':react-native-node').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-node/android')
 include ':react-native-navigation'
 project(':react-native-navigation').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-navigation/android/app')
 include ':react-native-fs'
 project(':react-native-fs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fs/android')
-include ':nodejs-mobile-react-native'
-project(':nodejs-mobile-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/nodejs-mobile-react-native/android')
 
 include ':app'
