--- a/package.json
+++ b/package.json
@@ -3,27 +3,30 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "setup-back": "cp ./src/backend/package.json ./nodejs-assets/nodejs-project/",
-    "compile-back": "tsc -p ./tsconfig-backend.json",
-    "install-back": "cd ./nodejs-assets/nodejs-project && npm i && cd ../..",
-    "build-back": "npm run setup-back && npm run compile-back && npm run install-back",
+    "build-back": "./build-back.sh",
     "build-front": "tsc -p ./tsconfig-frontend.json",
     "prestart": "npm run build-back && npm run build-front",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
+    "@cycle/http": "^14.5.0",
     "@cycle/isolate": "^3.1.0",
     "@cycle/run": "^3.3.0",
+    "@types/express": "^4.0.37",
+    "@types/node": "^8.0.34",
     "@types/react": "^16.0.10",
     "@types/react-native": "^0.49.2",
     "cycle-native-navigation": "^1.1.0",
-    "nodejs-mobile-react-native": "^0.1.1",
+    "express": "^4.16.2",
+    "noderify": "^3.0.2",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-action-button": "^2.8.0",
     "react-native-fs": "^2.8.1",
     "react-native-navigation": "^1.1.236",
+    "react-native-node": "^2.0.0",
+    "rxjs": "^5.4.3",
     "typescript": "^2.5.3",
     "xstream": "^11.0.0"
   },
