--- a/tsconfig-frontend.json
+++ b/tsconfig-frontend.json
@@ -12,13 +12,12 @@
     "module": "commonjs",
     "target": "es2015",
     "outDir": "./lib",
+    "types": [],
     "lib": ["dom", "es5", "scripthost", "es2015"]
   },
   "files": [
     "src/frontend/main.ts",
     "src/frontend/styles.ts",
-    "src/frontend/drivers/nodejs.ts",
-    "src/typings/nodejs-mobile-react-native.d.ts",
     "src/typings/react-native-action-button.d.ts"
   ],
   "exclude": ["node_modules"]
