Backend detects dats from filesystem, frontend can query for those

--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dat-node": "3.5.3",
     "rxjs": "5.4.3",
-    "express": "4.16.2"
+    "express": "4.16.2",
+    "body-parser": "1.18.2"
   }
 }
