--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^8.0.34",
     "@types/react": "^16.0.10",
     "@types/react-native": "^0.49.2",
+    "body-parser": "^1.18.2",
     "cycle-native-navigation": "^1.1.0",
     "express": "^4.16.2",
     "noderify": "^3.0.2",
