--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-native": "^0.49.2",
     "body-parser": "^1.18.2",
     "cycle-native-navigation": "^1.1.0",
+    "cycle-onionify": "^4.0.0",
     "express": "^4.16.2",
     "noderify": "^3.0.2",
     "react": "16.0.0-beta.5",
