Backend downloads apk and frontend actually installs apk

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-apk-installer')
     compile project(':react-native-node')
     compile project(':react-native-navigation')
     compile project(':react-native-fs')
