--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "prepare": "patch-package",
     "build-back": "./build-back.sh",
     "build-front": "tsc -p ./tsconfig-frontend.json",
     "prestart": "npm run build-back && npm run build-front",
@@ -22,9 +23,11 @@
     "cycle-onionify": "^4.0.0",
     "express": "^4.16.2",
     "noderify": "^3.0.2",
+    "patch-package": "^3.5.1",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
     "react-native-action-button": "^2.8.0",
+    "react-native-apk-installer": "^0.0.2",
     "react-native-fs": "^2.8.1",
     "react-native-navigation": "^1.1.236",
     "react-native-node": "^2.1.1",
