--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "21.2.1",
+    "mkdirp": "^0.5.1",
     "react-test-renderer": "16.0.0-beta.5"
   },
   "jest": {
