--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,7 +99,7 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "com.datinstaller"
+        applicationId "com.staltz.datinstaller"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
