--- a/tsconfig-frontend.json
+++ b/tsconfig-frontend.json
@@ -21,6 +21,7 @@
     "src/frontend/drivers/apk-installer.ts",
     "src/frontend/drivers/package-info.ts",
     "src/typings/react-native-apk-installer.d.ts",
+    "src/typings/react-native-progress.d.ts",
     "src/typings/react-native-action-button.d.ts",
     "src/typings/react-native-simple-markdown.d.ts"
   ],
