--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DatInstaller",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "prepare": "patch-package",
@@ -8,7 +8,21 @@
     "build-front": "tsc -p ./tsconfig-frontend.json",
     "prestart": "npm run build-back && npm run build-front",
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "update-android-version": "react-native-version --target android",
+    "license-check": "license-check",
     "test": "jest"
+  },
+  "license-check-config": {
+    "src": [
+      "src/**/*.ts",
+      "index.android.js",
+      "!src/**/*.d.ts",
+      "!./node_modules/**/*"
+    ],
+    "path": "license-banner.txt",
+    "blocking": false,
+    "logInfo": false,
+    "logError": true
   },
   "dependencies": {
     "@cycle/http": "^14.5.0",
@@ -41,7 +55,9 @@
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "21.2.1",
+    "license-check": "^1.1.5",
     "mkdirp": "^0.5.1",
+    "react-native-version": "^2.3.1",
     "react-test-renderer": "16.0.0-beta.5"
   },
   "jest": {
