--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-apk-installer": "^0.0.2",
     "react-native-fs": "^2.8.1",
     "react-native-navigation": "^1.1.236",
-    "react-native-node": "^2.1.1",
+    "react-native-node": "3.0.x",
     "react-native-progress": "^3.4.0",
     "react-native-simple-markdown": "^1.0.60-rc.3",
     "rxjs": "^5.4.3",
