--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -155,7 +155,7 @@ dependencies {
     compile project(':react-native-fs')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile("com.facebook.react:react-native:0.49.3") { force = true }
 }
 
 // Run this once to be able to run the application with BUCK
